# Yata

./: .clang-format  .gitignore  CMakeLists.txt  FileReader.cpp  FileReader.h  ListViewWindow.qml  Task.cpp  Task.h  TasksListModel.cpp  TasksListModel.h  TasksTableView.qml  data.xml  main.cpp  main.qml  qml.qrc
data/: schema.xsd
src/: main.cpp  qml.qrc
src/models/: Task.h
src/qml/: AppWindow.qml  main.qml
src/utils/: FileReader.cpp  XmlSection.h
test_data/: todo.txt
utils/: XmlParser.cpp  XmlParser.h
